# ML-Model-Training-Pipeline

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
config/: default.yaml  tuning_example.yaml
src/churn_pipeline/: __init__.py  cli.py  config.py  data.py  evaluate.py  logging_config.py  models.py  pipeline.py  preprocessing.py  registry.py  tracking.py  tuning.py
tests/: conftest.py  test_config.py  test_data.py  test_pipeline.py
